--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,38 @@
+html{
+  background-color: black;
+}
 .App {
-  text-align: center;
+    text-align: center;
+    background-color: pink;
+    background-position: center;
+    display: flex;
+    flex-direction: row;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.parallax1 {
+  flex-direction: column;
+  width: 60%;
+  opacity: 0.8;
+  height: 90vh;
+  border: 10px grey solid;
+  justify-content: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
+  width: 10vw;
+  display: flex;
+}
+.content {
+  width: 90vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  margin: auto;
+  padding: auto;
+  padding-left: 15%;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p2{
+  height: 10vh;
 }
