--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,14 @@ html{
 }
 .App {
     text-align: center;
-    background-color: pink;
+    background-color: black;
     background-position: center;
     display: flex;
     flex-direction: row;
 }
 .parallax1 {
   flex-direction: column;
-  width: 60%;
-  opacity: 0.8;
+  width: 80%;
   height: 90vh;
   border: 10px grey solid;
   justify-content: center;
@@ -19,7 +18,6 @@ html{
 .nav {
   display: flex;
   flex-direction: column;
-  width: 10vw;
   height: 10%;
   display: flex;
 }
@@ -38,4 +36,10 @@ html{
 }
 .p2{
   height: 10vh;
+}
+.name {
+  font-size: 24px;
+}
+.portfolio {
+  padding-top: 10vh;
 }
