--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,51 @@
-html{
-  background-color: black;
+html {
+    background-color: black;
 }
 .App {
     text-align: center;
     background-color: black;
-    background-position: center;
     display: flex;
     flex-direction: row;
 }
 .parallax1 {
-  flex-direction: column;
-  width: 80%;
-  height: 90vh;
-  border: 10px grey solid;
-  justify-content: center;
+    width: 80%;
+    height: 90vh;
+    border: 10px grey solid;
+    margin: auto;
 }
 .nav {
-  display: flex;
-  flex-direction: column;
-  height: 10%;
-  display: flex;
-  position: fixed;
+    display: flex;
+    height: 200vw;
+    display: flex;
+    width: 22vw;
 }
 .content {
-  width: 80vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  align-self: center;
-  margin: auto;
-  padding: auto;
-  padding-left: 15%;
-
+    width: 78vw;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
-.p2{
-  height: 10vh;
+.p2 {
+    height: 10vh;
 }
 .name {
-  font-size: 24px;
+    font-size: 24px;
 }
 .portfolio {
-  padding-top: 10vh;
-  width: 100%;
+    padding-top: 10vh;
+    width: 100%;
 }
 .contact {
-  height: 100vh;
-  color: white;
+    height: 100vh;
+    color: white;
 }
 .music {
-  height: 100vh;
+    height: 100vh;
 }
 .onPic {
-  background-color: white;
-  opacity: 0.5;
+    background-color: white;
+    opacity: 0.5;
 }
