--- a/src/App.css
+++ b/src/App.css
@@ -45,12 +45,46 @@ html {
     height: 100vh;
 }
 .about {
-  height: 200px;
-  background-color: blue;
+  margin-top: 100px;
+  height: 600px;
+  background-color: white;
+  opacity: 0.7;
   width: 78vw;
   padding: 0;
+  font-size: 20px;
 }
 .onPic {
     background-color: white;
     opacity: 0.5;
+    font-size: 32px;
+    list-style: none;
+    padding: 10px;
+    margin-top: 100px;
+    align-content: flex-end;
+}
+.onPic1 {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    opacity: 0.5;
+    font-size: 32px;
+    list-style: none;
+    padding: 10px;
+}
+.onPicLI {
+    padding-top: 15px;
+    display: flex;
+    justify-content: center;
+    width: auto;
+    margin: auto;
+}
+h2 {
+    font-size: 30px;
+    text-decoration: underline;
+}
+.space1{
+    height: 110px;
+}
+.space2{
+    height: 130px;
 }
