--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html {
 }
 .nav {
     display: flex;
-    height: 200vw;
+    height: 100vh;
     display: flex;
     width: 22vw;
 }
@@ -27,6 +27,9 @@ html {
     flex-direction: column;
     align-items: center;
 }
+h1{
+    color: white;
+}
 .p2 {
     height: 10vh;
 }
@@ -37,9 +40,16 @@ html {
     padding-top: 10vh;
     width: 100%;
 }
+.home {
+    /* padding-top: 10vh; */
+    width: 100%;
+}
 .contact {
     height: 100vh;
     color: white;
+}
+.blank {
+    height: 100vh;
 }
 .music {
     height: 100vh;
