--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ html {
     margin: auto 100px;
     margin-left: 100px;
 }
+.parallax2 {
+    width: 60%;
+    height: 90vh;
+    border: 10px grey solid;
+    margin: auto 100px;
+    margin-left: 300px;
+}
 .parallax5 {
     width: 50%;
     height: 40%;
@@ -47,6 +54,7 @@ html {
 }
 .portfolio {
     padding-top: 10vh;
+    padding-left: 300px;
     width: 100%;
 }
 .blank {
