--- a/src/App.css
+++ b/src/App.css
@@ -71,10 +71,9 @@ html {
     width: 80vw;
 }
 .contacts {
-    /* height: 100vh; */
+    width: 80%;
     color: black;
     background-color: grey;
-    /* opacity: 0.5; */
     align-content: center;
 }
 .link-badge {
@@ -205,7 +204,6 @@ h2 {
     font-style: italic;
     font-size: 1em;
 }
-
 .snip1579 a {
     position: absolute;
     top: 0;
